modificacion redireccion a entrar a game board

--- a/JeopardyGameClient/Pages/LobbyPage.xaml
+++ b/JeopardyGameClient/Pages/LobbyPage.xaml
@@ -85,7 +85,7 @@
                     </Border>
                 </StackPanel>
             </Grid>
-            <Button x:Name="bttStartGame" Content = "{x:Static p:Resources.bttStartGame}" Style="{StaticResource ButtonStartGame}" HorizontalAlignment="Left" Margin="854,677,0,0" VerticalAlignment="Top" Height="44" Width="151"/>
+            <Button x:Name="bttStartGame" Content = "{x:Static p:Resources.bttStartGame}" Style="{StaticResource ButtonStartGame}" HorizontalAlignment="Left" Margin="854,677,0,0" VerticalAlignment="Top" Height="44" Width="151" Click="bttStartGame_Click"/>
             <Button x:Name="bttCancelGame" Content = "{x:Static p:Resources.bttCancelGame}" Style="{StaticResource ButtonCancelGame}" HorizontalAlignment="Left" Margin="1037,676,0,0" Click="CLicButtonCancelGame" VerticalAlignment="Top" Height="45" Width="149"/>
 
         </Grid>
